# License_plate_recognition

./: CMakeLists.txt  README.md
configs/: ocr.yaml  yolov4-licence.cfg
extra/: class_timer.hpp
include/: CvxText.h  crnn.h  detector.h  ocrStruct.h
modules/: class_yolo_detector.hpp  trt_utils.cpp
src/: CvxText.cpp  crnn.cpp  demo.cpp  detector.cpp
